# vsf

./: .gitignore  CMakeLists.txt
Components/IPAlgorithms/: IPAlgorithms.vcxproj  SSAlgorithms.cpp
Components/Include/: DataTypes.h
Components/OCVVideo/: OCVVideo.cpp  OCVVideo.vcxproj
Interfaces/VideoSubFinderWXW/: BitmapButton.cpp  CMakeLists.txt  ImageBox.cpp  ImageBox.h  MainFrm.cpp  MainFrm.h  SettingsPanel.cpp  VideoSubFinderWXW.cpp  VideoSubFinderWXW.sln  VideoSubFinderWXW.vcxproj
